<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2"
    android:orientation="vertical"
    tools:context=".ui.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/iv_about1"
            android:layout_width="103dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_about1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/color_212121"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_hua"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:background="@color/color_fafafa"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/now_version"
            android:textColor="@color/color_4a4a4a"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_version_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:textColor="@color/color_a4a4a4"
            android:textSize="14sp"
            tools:text="1.1.2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_fafafa"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/project_url"
            android:textColor="@color/color_4a4a4a"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:gravity="center"
            android:text="http://fengyun.icu"
            android:textColor="@color/color_a4a4a4"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_fafafa"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/disclaimer"
            android:textColor="@color/color_4a4a4a"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>